--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,10 @@ on:
     types: [opened, synchronize, reopened]
   push:
     branches:
-      - master
+      - main
+  create:
+    tags:
+      - "*"
 
 jobs:
   lint:
@@ -55,3 +58,14 @@ jobs:
         run: pip install poetry && poetry install
       - name: Run Coverage
         run: poetry run pytest --cov=.
+
+  publish:
+    runs-on: ubuntu-latest
+    needs: [lint, build, coverage]
+    if: github.event_name == 'create' && startsWith(github.ref, 'refs/tags')
+    steps:
+      - uses: actions/checkout@v1
+      - name: Build and publish to PyPi
+        uses: JRubics/poetry-publish@v1.10
+        with:
+          pypi_token: ${{ secrets.PYPI_TOKEN }}
