--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
           key: pre-commit-${{ runner.os }}-${{ hashFiles('.pre-commit-config.yaml') }}
       - uses: pre-commit/action@v2.0.3
 
-  build:
+  unit-test:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
@@ -41,10 +41,21 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install Dependencies
         run: pip install poetry && poetry install
-      - name: Install dependencies
-        run: poetry install
       - name: Test
         run: poetry run pytest
+
+  smoke-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v1
+        with:
+          python-version: "3.10"
+      - name: Install Dependencies
+        run: pip install poetry && poetry install
+      - name: Run smoke test
+        run: poetry run ./tests/run-smoketest.sh
 
   coverage:
     runs-on: ubuntu-latest
@@ -61,7 +72,7 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
-    needs: [lint, build, coverage]
+    needs: [lint, unit-test, smoke-test, coverage]
     if: github.event_name == 'create' && startsWith(github.ref, 'refs/tags')
     steps:
       - uses: actions/checkout@v1
