backstage: Update owner

--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -23,6 +23,6 @@ metadata:
     - quality
 spec:
   type: library
-  owner: dev-platform
+  owner: org-back-end-platform
   system: platform
   lifecycle: experimental
